--- a/public/partials/head.ejs
+++ b/public/partials/head.ejs
@@ -1,11 +1,21 @@
 <meta charset="UTF-8" />
-<title>EJS Is Fun</title>
+<title><%= name %></title>
+<script>
+  document.getElementById("print").innerHTML = process.env.NAME;
+</script>
 
 <!-- CSS (load bootstrap from a CDN) -->
 <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
   rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css"
+  integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+  crossorigin="anonymous"
 />
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+  crossorigin="anonymous"
+></script>
 <style>
   body {
     padding-top: 50px;
