--- a/public/partials/head.ejs
+++ b/public/partials/head.ejs
@@ -3,6 +3,7 @@
 <script>
   document.getElementById("print").innerHTML = process.env.NAME;
 </script>
+<link rel="stylesheet" href="css/main.css" />
 
 <!-- CSS (load bootstrap from a CDN) -->
 <link
@@ -16,8 +17,5 @@
   integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
   crossorigin="anonymous"
 ></script>
-<style>
-  body {
-    padding-top: 50px;
-  }
-</style>
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
