--- a/public/partials/head.ejs
+++ b/public/partials/head.ejs
@@ -1,11 +1,12 @@
 <meta charset="UTF-8" />
-<title><%= name %></title>
-<script>
-  document.getElementById("print").innerHTML = process.env.NAME;
-</script>
+<link rel="icon" type="image/x-icon" href="<%= logo %>" />
 <link rel="stylesheet" href="css/main.css" />
 
 <!-- CSS (load bootstrap from a CDN) -->
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+/>
 <link
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
   rel="stylesheet"
