--- a/public/views/forum.ejs
+++ b/public/views/forum.ejs
@@ -5,17 +5,9 @@
   </head>
   <body class="container">
     <header id="header"><%- include('../partials/header'); %></header>
-    <main>
-      <%- include('../partials/main-slides'); %> <%-
-      include('../partials/chat'); %>
-    </main>
-    <%- include('../partials/banners'); %>
+    <main><%- include('../partials/forum'); %></main>
     <footer id="footer" class="text-center text-muted">
       <%- include('../partials/footer'); %>
     </footer>
-
-    <!-- Button trigger modal -->
-
-    <!-- Modal -->
   </body>
 </html>
