--- a/public/partials/head.ejs
+++ b/public/partials/head.ejs
@@ -6,3 +6,13 @@
 
 <link rel="stylesheet" href="libs/bootstrap-5.3.0-dist/css/bootstrap.min.css" />
 <script src="libs/bootstrap-5.3.0-dist/js/bootstrap.bundle.min.js"></script>
+<script
+  src="https://code.jquery.com/jquery-3.7.0.min.js"
+  integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+  crossorigin="anonymous"
+></script>
+<script>
+  $(document).ready(function () {
+    $("body").toggle(1000);
+  });
+</script>
