--- a/public/partials/header.ejs
+++ b/public/partials/header.ejs
@@ -217,7 +217,7 @@
             aria-label="Close"
           ></button>
         </div>
-        <div class="modal-body">...</div>
+        <div class="modal-body">Вы уверены, что хотите выйти из аккаунта?</div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary">Выйти</button>
           <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
