--- a/public/views/admin-main.ejs
+++ b/public/views/admin-main.ejs
@@ -3,7 +3,7 @@
   <head>
     <%- include('../partials/head'); %>
   </head>
-  <body class="container">
+  <body>
     <header id="header"><%- include('../partials/admin/header'); %></header>
     <main></main>
 
