--- a/app/partials/chat.ejs
+++ b/app/partials/chat.ejs
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<!-- <div class="container mt-4">
   <div class="card mx-auto" style="max-width: 80%">
     <div class="fs-5 text-center text-uppercase font-monospace">
       чат
@@ -225,4 +225,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
