--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -6,10 +6,10 @@
   <body class="container">
     <header id="header"><%- include('../partials/header'); %></header>
     <main>
-      <%- include('../partials/main-slides'); %> <%-
-      include('../partials/chat'); %>
+      <!-- <%- include('../partials/main-slides'); %>  -->
+      <%- include('../partials/chat'); %>
     </main>
-    <%- include('../partials/banners'); %>
+    <!-- <%- include('../partials/banners'); %> -->
     <footer id="footer" class="text-center text-muted">
       <%- include('../partials/footer'); %>
     </footer>
