--- a/app/partials/chat.ejs
+++ b/app/partials/chat.ejs
@@ -1,228 +1,59 @@
-<!-- <div class="container mt-4">
-  <div class="card mx-auto" style="max-width: 80%">
-    <div class="fs-5 text-center text-uppercase font-monospace">
-      чат
-      <hr />
-    </div>
-    <div class="card-body p-4" style="height: 500px; overflow: auto">
-      <div class="d-flex align-items-baseline mb-4">
-        <div class="position-relative avatar">
-          <img
-            src="http://dummyimage.com/50"
-            class="img-fluid rounded-circle"
-            alt=""
-          />
-          <span
-            class="position-absolute bottom-0 start-100 translate-middle p-1 bg-success border border-light rounded-circle"
-          >
-          </span>
-        </div>
-        <div class="pe-2">
-          <div>
-            <div class="card card-text d-inline-block p-2 px-3 m-1">
-              Lorem ipsum dolor sit amet consectetur.
-            </div>
-          </div>
-          <div>
-            <div class="small">01:10PM</div>
-          </div>
-        </div>
-      </div>
+<div class="container">
+  <ul id="messages" class="list-group">
+    <% for (var i = 0; i < messages.length; i++) { %>
+    <li class="list-group-item">
+      <%= messages[i].author %>: <%= messages[i].message %>
+    </li>
+    <% } %>
+  </ul>
+</div>
+<link rel="stylesheet" href="libs/bootstrap-5.3.0-dist/css/bootstrap.min.css" />
+<script
+  src="https://cdn.socket.io/4.6.0/socket.io.min.js"
+  integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://code.jquery.com/jquery-3.7.0.min.js"
+  integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+  crossorigin="anonymous"
+></script>
 
-      <div
-        class="d-flex align-items-baseline text-end justify-content-end mb-4"
-      >
-        <div class="pe-2">
-          <div>
-            <div class="card card-text d-inline-block p-2 px-3 m-1">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam?
-            </div>
-          </div>
-          <div>
-            <div class="card card-text d-inline-block p-2 px-3 m-1">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-              veniam fuga iusto.
-            </div>
-          </div>
-          <div>
-            <div class="small">01:13PM</div>
-          </div>
-        </div>
-        <div class="position-relative avatar">
-          <img
-            src="http://dummyimage.com/50"
-            class="img-fluid rounded-circle"
-            alt=""
-          />
-          <span
-            class="position-absolute bottom-0 start-100 translate-middle p-1 bg-success border border-light rounded-circle"
-          >
-            <span class="visually-hidden">New alerts</span>
-          </span>
-        </div>
-      </div>
+<script>
+  const form = document.querySelector("#message-form");
+  const input = document.querySelector("#message");
+  const messages = document.querySelector("#messages");
 
-      <div class="d-flex align-items-baseline mb-4">
-        <div class="position-relative avatar">
-          <img
-            src="http://dummyimage.com/50"
-            class="img-fluid rounded-circle"
-            alt=""
-          />
-          <span
-            class="position-absolute bottom-0 start-100 translate-middle p-1 bg-success border border-light rounded-circle"
-          >
-            <span class="visually-hidden">New alerts</span>
-          </span>
-        </div>
-        <div class="pe-2">
-          <div>
-            <div class="card card-text d-inline-block p-2 px-3 m-1">
-              Lorem, ipsum dolor.
-            </div>
-          </div>
-          <div>
-            <div class="small">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-pencil"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"
-                />
-              </svg>
-              - 01:13PM
-            </div>
-          </div>
-        </div>
-      </div>
+  form.addEventListener("submit", (event) => {
+    event.preventDefault();
+    if (input.value) {
+      const message = input.value;
+      input.value = "";
 
-      <div
-        class="d-flex align-items-baseline text-end justify-content-end mb-4"
-      >
-        <div class="pe-2">
-          <div>
-            <div class="card card-text d-inline-block p-2 px-3 m-1">
-              Lorem ipsum dolor sit amet consectetur.
-            </div>
-          </div>
-          <div>
-            <div class="card card-text p-2 px-3 m-1 mb-5">
-              <div class="row align-items-center">
-                <div class="col-1">
-                  <a href=""
-                    ><svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="16"
-                      height="16"
-                      fill="currentColor"
-                      class="bi bi-play"
-                      viewBox="0 0 16 16"
-                    >
-                      <path
-                        d="M10.804 8 5 4.633v6.734L10.804 8zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696l6.363 3.692z"
-                      /></svg
-                  ></a>
-                </div>
-                <div class="col">
-                  <div class="progress" style="width: 100px; height: 4px">
-                    <div
-                      class="progress-bar bg-primary"
-                      role="progressbar"
-                      style="width: 35%"
-                      aria-valuenow="35"
-                      aria-valuemin="0"
-                      aria-valuemax="100"
-                    ></div>
-                  </div>
-                </div>
-                <div class="col-auto">
-                  <div class="small fw-bold">0:34</div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="position-relative avatar">
-          <img
-            src="http://dummyimage.com/50"
-            class="img-fluid rounded-circle"
-            alt=""
-          />
-          <span
-            class="position-absolute bottom-0 start-100 translate-middle p-1 bg-success border border-light rounded-circle"
-          >
-            <span class="visually-hidden">New alerts</span>
-          </span>
-        </div>
-      </div>
-    </div>
-    <div class="card-footer bg-white position-absolute w-100 bottom-0 m-0 p-1">
-      <div class="input-group">
-        <div class="input-group-text bg-transparent border-0">
-          <button class="btn btn-light text-secondary">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-paperclip"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z"
-              />
-            </svg>
-          </button>
-        </div>
-        <input
-          type="text"
-          class="form-control border-0"
-          placeholder="Сообщение"
-        />
-        <div class="input-group-text bg-transparent border-0">
-          <button class="btn btn-light text-secondary">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-emoji-smile"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
-              />
-              <path
-                d="M4.285 9.567a.5.5 0 0 1 .683.183A3.498 3.498 0 0 0 8 11.5a3.498 3.498 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.498 4.498 0 0 1 8 12.5a4.498 4.498 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zm4 0c0 .828-.448 1.5-1 1.5s-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5z"
-              />
-            </svg>
-          </button>
-        </div>
-        <div class="input-group-text bg-transparent border-0">
-          <button class="btn btn-light text-secondary">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-mic"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"
-              />
-              <path
-                d="M10 8a2 2 0 1 1-4 0V3a2 2 0 1 1 4 0v5zM8 0a3 3 0 0 0-3 3v5a3 3 0 0 0 6 0V3a3 3 0 0 0-3-3z"
-              />
-            </svg>
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
+      const xhr = new XMLHttpRequest();
+      xhr.onreadystatechange = () => {
+        if (xhr.readyState === XMLHttpRequest.DONE) {
+          if (xhr.status === 200) {
+            console.log("Сообщение успешно отправлено");
+          } else {
+            console.error("Ошибка отправки сообщения");
+          }
+        }
+      };
+      xhr.open("POST", "/message");
+      xhr.setRequestHeader("Content-Type", "application/json");
+      xhr.send(JSON.stringify({ message: message }));
+    }
+  });
+
+  const socket = io();
+  socket.on("chat message", (messages) => {
+    const messagesDiv = document.querySelector("#messages");
+    messagesDiv.innerHTML = "";
+    messages.forEach((message) => {
+      const li = document.createElement("p");
+      li.textContent = message;
+      messagesDiv.appendChild(li);
+    });
+  });
+</script>
