--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,17 +5,10 @@
   </head>
   <body class="container">
     <header id="header"><%- include('../partials/header'); %></header>
-    <main>
-      <!-- <%- include('../partials/main-slides'); %>  -->
-      <%- include('../partials/chat'); %>
-    </main>
-    <!-- <%- include('../partials/banners'); %> -->
+    <main><%- include('../partials/main-slides'); %></main>
+    <%- include('../partials/banners'); %>
     <footer id="footer" class="text-center text-muted">
       <%- include('../partials/footer'); %>
     </footer>
-
-    <!-- Button trigger modal -->
-
-    <!-- Modal -->
   </body>
 </html>
