--- a/app/views/nonAuthIndex.ejs
+++ b/app/views/nonAuthIndex.ejs
@@ -5,10 +5,7 @@
   </head>
   <body class="container">
     <header id="header"><%- include('../partials/nonAuth/header'); %></header>
-    <main>
-      <%- include('../partials/main-slides'); %> <%-
-      include('../partials/chat'); %>
-    </main>
+    <main><%- include('../partials/main-slides'); %></main>
     <%- include('../partials/banners'); %>
     <footer id="footer" class="text-center text-muted">
       <%- include('../partials/footer'); %>
