--- a/views/nonAuthErr.ejs
+++ b/views/nonAuthErr.ejs
@@ -22,7 +22,7 @@
         />
       </picture>
       <h3 class="font-monospace">
-        Для просмотра данной страницы нужно быть авторизованным!
+        Для просмотра данной страницы нужно авторизоватся!
       </h3>
       <a href="auth/steam">
         <button type="button" class="btn btn-warning">
