--- a/partials/products.ejs
+++ b/partials/products.ejs
@@ -5,7 +5,8 @@
       <div class="card mb-4 shadow-sm">
         <div class="card-body">
           <h4><%= product.name %></h4>
-          <code>$<%= product.price %></с>
+          <h4><%= product.id %></h4>
+          <code><%= product.price %><%= currency %></code>
           <div class="d-flex justify-content-between align-items-center">
             <a href="#" class="btn btn-sm btn-outline-secondary">Buy</a>
           </div>
