--- a/views/pay.ejs
+++ b/views/pay.ejs
@@ -9,7 +9,6 @@
   </head>
   <body>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper"></script>
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
@@ -18,7 +17,7 @@
     <div class="container mt-5">
       <h1>Списание с баланса</h1>
       <p>Ваш текущий баланс: <%= balance %> единиц</p>
-      <button class="btn btn-primary" id="debitBtn" <% if (balance < 10) { %>
+      <button class="btn btn-primary" id="debitBtn" <% if (balance < 20) { %>
         data-toggle="modal" data-target="#notEnoughBalanceModal" <% } %> >
         Списать 10 единиц
       </button>
@@ -28,7 +27,7 @@
         $("#debitBtn").click(function () {
           $.ajax({
             type: "POST",
-            url: "/debit/20",
+            url: `/debit/20`,
             success: function (data) {
               window.location.reload();
             },
