--- a/partials/serverCard.ejs
+++ b/partials/serverCard.ejs
@@ -1,4 +1,4 @@
-<center>
+<!-- <center>
   <div class="col-md-6 container">
     <div class="card mb-3">
       <div class="row no-gutters align-items-center">
@@ -50,3 +50,4 @@
         </tbody>
       </table>
     </div> -->
+-->
