--- a/partials/footer.ejs
+++ b/partials/footer.ejs
@@ -7,3 +7,12 @@
     "<%= name %>" +
     unescape("%3C%2F%74%69%74%6C%65%3E");
 </script>
+<br />
+<br />
+<div class="container-sm">
+  <a href="/contacts" class="text-decoration-none font-monospace">Контакты</a>
+  <br />
+  <a href="/privacy" class="text-decoration-none font-monospace"
+    >Политика конфиденциальности</a
+  >
+</div>
