--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -5,8 +5,12 @@
   </head>
   <body class="container bg-slate-200">
     <header id="header"><%- include('../partials/header'); %></header>
-    <main><%- include('../partials/shop-cards'); %></main>
-
+    <main class="contact-info">
+      <p><code>E-mail: </code>email@example.com</p>
+      <p><code>VK: </code>@<%= name %></p>
+      <p><code>Telegram: </code>@<%= name %></p>
+      <p><code>Steam: </code>@<%= name %></p>
+    </main>
     <footer id="footer" class="text-center text-muted">
       <%- include('../partials/footer'); %>
     </footer>
