--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <main>
       <%- include('../partials/main-slides'); %>
       <br />
+      <%- include('../partials/serverCard'); %>
     </main>
     <%- include('../partials/banners'); %>
     <footer id="footer" class="text-center text-muted">
