pre-release commit 🌠

--- a/partials/modules/headerBtn.ejs
+++ b/partials/modules/headerBtn.ejs
@@ -5,7 +5,7 @@
       href="shop"
       role="button"
       aria-expanded="false"
-      title="Магазин"
+      title="Shop"
       ><svg
         xmlns="http://www.w3.org/2500/svg"
         width="25"
@@ -21,7 +21,7 @@
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="tickets" title="Поддержка"
+    <a class="nav-link" href="tickets" title="Support"
       ><svg
         xmlns="http://www.w3.org/2500/svg"
         width="25"
@@ -40,7 +40,7 @@
   </li>
 
   <li class="nav-item">
-    <a class="nav-link" href="rules" title="Правила"
+    <a class="nav-link" href="rules" title="Rules"
       ><svg
         xmlns="http://www.w3.org/2000/svg"
         width="25"
