--- a/partials/nonAuth/header.ejs
+++ b/partials/nonAuth/header.ejs
@@ -20,7 +20,7 @@
       <div class="d-flex">
         <a href="auth/steam">
           <button type="button" class="btn btn-primary">
-            Войти<svg
+            Sign in<svg
               xmlns="http://www.w3.org/2000/svg"
               width="20"
               height="20"
@@ -46,26 +46,5 @@
     tabindex="-1"
     aria-labelledby="exampleModalLabel"
     aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Подтверждение</h5>
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-          ></button>
-        </div>
-        <div class="modal-body">Вы уверены, что хотите выйти из аккаунта?</div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary">Выйти</button>
-          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-            Отмена
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
+  ></div>
 </nav>
