--- a/views/nonAuthproducts.ejs
+++ b/views/nonAuthproducts.ejs
@@ -22,7 +22,7 @@
                     class="btn btn-sm btn-outline-secondary"
                     onclick="nonAuth()"
                   >
-                    Купить
+                    Buy
                   </button>
                 </div>
               </div>
@@ -30,7 +30,7 @@
           </div>
           <script>
             function nonAuth() {
-              alert("Вам необходимо авторизоваться для покупки");
+              alert("You must be logged in to purchase");
             }
           </script>
           <% }); %>
