--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -40,7 +40,7 @@
           <ul class="dropdown-menu">
             <li>
               <a class="dropdown-item" href="profile"
-                >Профиль
+                >Profile
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -64,7 +64,7 @@
                 class="btn btn-primary"
                 data-bs-toggle="modal"
                 data-bs-target="#exampleModal"
-                >Выйти
+                >Logout
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -100,7 +100,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Подтверждение</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Confirmation</h5>
           <button
             type="button"
             class="btn-close"
@@ -108,13 +108,15 @@
             aria-label="Close"
           ></button>
         </div>
-        <div class="modal-body">Вы уверены, что хотите выйти из аккаунта?</div>
+        <div class="modal-body">
+          Are you sure you want to log out of your account?
+        </div>
         <div class="modal-footer">
           <a href="/logout"
-            ><button type="button" class="btn btn-secondary">Выйти</button></a
+            ><button type="button" class="btn btn-secondary">Logout</button></a
           >
           <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-            Отмена
+            Exit
           </button>
         </div>
       </div>
