--- a/views/nonAuth404.ejs
+++ b/views/nonAuth404.ejs
@@ -96,16 +96,12 @@
           return TextScramble;
         })();
 
-        // ——————————————————————————————————————————————————
-        // Example
-        // ——————————————————————————————————————————————————
-
         var phrases = [
-          "Не Найдено",
+          "Not Found",
           "404",
           "40",
           "4",
-          "Не Найдено",
+          "Not Found",
           "4",
           "40",
           "404",
