--- a/views/nonAuthErr.ejs
+++ b/views/nonAuthErr.ejs
@@ -21,12 +21,10 @@
           height="128"
         />
       </picture>
-      <h3 class="font-monospace">
-        Для просмотра данной страницы нужно авторизоватся!
-      </h3>
+      <h3 class="font-monospace">You must be logged in to view this page!</h3>
       <a href="auth/steam">
         <button type="button" class="btn btn-warning">
-          Войти<svg
+          Sign in<svg
             xmlns="http://www.w3.org/2000/svg"
             width="20"
             height="20"
