--- a/partials/footer.ejs
+++ b/partials/footer.ejs
@@ -16,9 +16,10 @@
     "<%= name %>" +
     unescape(_0xef62[0]);
 </script>
-<br />
+
 <br />
 <div class="container-sm">
+  <%- include('../partials/banners'); %>
   <a href="/contacts" class="text-decoration-none font-monospace">Contacts</a>
   <br />
   <a href="/privacy" class="text-decoration-none font-monospace">Privacy</a>
