--- a/partials/serverCard.ejs
+++ b/partials/serverCard.ejs
@@ -4,8 +4,8 @@
       <div class="row no-gutters align-items-center">
         <div class="col-md-4">
           <img
-            src="https://steamuserimages-a.akamaihd.net/ugc/957467519330837557/D07FF2B33C301085A6B7A352C71FBF8C2B26728B/?imw=268&imh=151&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true"
-            class="card-img"
+            src="https://dummyimage.com/400x300/000/fff"
+            class="card-img server-map-img"
             alt="..."
           />
         </div>
@@ -31,25 +31,3 @@
     </div>
   </div>
 </center>
-<!-- <div class="container">
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Ник</th>
-            <th>Время на сервере</th>
-            <th>Убийств</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% serverPlayers.forEach((item) => { %>
-          <tr>
-            <td><code><%= item.name %></code></td>
-            <td>
-              <%= item.timeOnline.hours + ':' + item.timeOnline.minutes %>
-            </td>
-            <td><%= item.score %></td>
-          </tr>
-          <% }); %>
-        </tbody>
-      </table>
-    </div> -->
